metadata-sfdx/force-app/main/default/objects/becquerel_routing_prof_def_cc__x/becquerel_routing_prof_def_cc__x.object-meta.xml
<CustomObject>
    <description>becquerel__routing_prof_def_cc</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__routing_prof_def_cc</externalName>
    <label>becquerel__routing_prof_def_cc</label>
    <pluralLabel>becquerel__routing_prof_def_cc</pluralLabel>
</CustomObject>