metadata-sfdx/force-app/main/default/objects/becquerel_routing_prof_def_cc__x/fields/CustomerContact_c__c.field-meta.xml
<CustomField>
    <fullName>CustomerContact_c__c</fullName>
    <description>CustomerContact__c</description>
    <externalDeveloperName>CustomerContact__c</externalDeveloperName>
    <label>CustomerContact__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>