metadata-sfdx/force-app/main/default/objects/becquerel_routing_prof_def_cc__x/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <description>name</description>
    <externalDeveloperName>name</externalDeveloperName>
    <label>name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>