metadata-sfdx/force-app/main/default/objects/becquerel_routing_prof_def_cc__x/fields/sav_available_service_id__c.field-meta.xml
<CustomField>
    <fullName>sav_available_service_id__c</fullName>
    <description>sav_available_service_id</description>
    <externalDeveloperName>sav_available_service_id</externalDeveloperName>
    <label>sav_available_service_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>