metadata-sfdx/force-app/main/default/objects/becquerel_routing_prof_def_cc__x/fields/usr_email__c.field-meta.xml
<CustomField>
    <fullName>usr_email__c</fullName>
    <description>usr_email</description>
    <externalDeveloperName>usr_email</externalDeveloperName>
    <label>usr_email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>