metadata-sfdx/force-app/main/default/objects/becquerel_routing_prof_def_cc__x/fields/usr_phn_phone_number__c.field-meta.xml
<CustomField>
    <fullName>usr_phn_phone_number__c</fullName>
    <description>usr_phn_phone_number</description>
    <externalDeveloperName>usr_phn_phone_number</externalDeveloperName>
    <label>usr_phn_phone_number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>