metadata-sfdx/force-app/main/default/objects/becquerel_routing_prof_def_cc__x/fields/usr_user_id__c.field-meta.xml
<CustomField>
    <fullName>usr_user_id__c</fullName>
    <description>usr_user_id</description>
    <externalDeveloperName>usr_user_id</externalDeveloperName>
    <label>usr_user_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>