metadata-sfdx/force-app/main/default/objects/becquerel_routing_prof_def_cc__x/fields/Version_c__c.field-meta.xml
<CustomField>
    <fullName>Version_c__c</fullName>
    <description>Version__c</description>
    <externalDeveloperName>Version__c</externalDeveloperName>
    <label>Version__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>